INGRESS/HAProxy/HAProxy_GWAPI_GatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gwclass-haproxy
  # Cluster resource, no namespace
spec:
  controllerName: haproxy-ingress.github.io/controller
