INGRESS/HAProxy/HAProxy_GWAPI_Gateway_HTTP.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: gw-haproxy-http
  #namespace: project1ns
spec:
  gatewayClassName: gwclass-haproxy
  listeners:
  - name: listener-project1 
    port: 80
    protocol: HTTP
