INGRESS/HAProxy/HAProxy_GWAPI_HttpRoute_HTTPS.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: httproute-https-project1 
  namespace: project1ns
  #annotations:
    # Next line active IP restriction plugin named rule

spec:
  parentRefs:
  - name: gw-haproxy-https
    #sectionName: listner-haproxy-https
  hostnames:
  - haprx1.lab.byte13.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /frontend-1111
    backendRefs:
    - name: service-alpine-k8s-tools-1111
      kind: Service
      port: 1111
