INGRESS/HAProxy/Ingress_Frontend-1111_With-allow-list_TLS.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls-ipfilter-frontendpod-1111
  annotations:
    # See https://www.haproxy.com/documentation/kubernetes-ingress/community/configuration-reference/ingress/
    haproxy-ingress.github.io/load-balance: random
    # To add external client IP address in X-Forwarded-for header
    #haproxy-ingress.github.io/forwarded-for: "true"
    #haproxy-ingress.github.io/allowlist-source-range: "10.13.3.100/32,10.1.2.0/24"
    haproxy-ingress.github.io/allowlist-source-range: "10.13.3.2/32,10.1.2.0/24"
spec:
  ingressClassName: haproxy
  tls:
  - secretName: haprx1-cert
    hosts:
    - "haprx1.lab.byte13.org"
  rules:
  - host: "haprx1.lab.byte13.org"
    http:
      paths:
      - path: /frontend-1111
        pathType: Prefix
        backend:
          service:
            name: service-alpine-k8s-tools-1111 
            port:
              number: 1111
