INGRESS/HAProxy/Ingress_Frontend-3333.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontendpod-3333
  annotations:
    load-balance: random 
spec:
  ingressClassName: haproxy
  rules:
  - host: "haprx1.lab.byte13.org"
    http:
      paths:
      - path: /frontend-3333
        pathType: Prefix
        backend:
          service:
            name: service-alpine-k8s-tools-3333 
            port:
              number: 3333
